fix: p spacing

--- a/src/components/ResultCard/styles.css
+++ b/src/components/ResultCard/styles.css
@@ -32,6 +32,8 @@
 
 .info-container h4 {
   font-size: 16px;
+  font-weight: bold;
+  margin-right: 5px;
 }
 
 .info-container h5 {
@@ -53,3 +55,8 @@
 .card-perfil {
   color: #737373;
 }
+
+p{
+  margin-bottom: 0;
+}
+
